--- a/main.html
+++ b/main.html
@@ -8,7 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <main id="job" class="accio">
+		<p class="hello-accio">Hello Accio Job</p>
+	</main>
+
+	<style>
+		main{
+			height:150px;
+			width:150px;
+			background-color: black;
+		}
+		p{
+			color: white;
+			margin-left: 32px;
+			padding: 10px;
+		}
+	</style>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
